--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -1,16 +1,12 @@
-<!-- Navigation Bar-->
 <header id="topnav">
     <div class="topbar-main">
         <div class="container">
-
-            <!-- Logo container-->
             <div class="logo">
-                <a href="index.html" class="logo"><i class="md md-equalizer"></i> <span>Daydash</span> </a>
+              <%= link_to root_path, class: "logo" do %>
+                <i class="md md-equalizer"></i> <span>Daydash</span>
+              <% end %>
             </div>
-            <!-- End Logo container-->
-
             <div class="menu-extras">
-
                 <ul class="nav navbar-nav navbar-right pull-right">
                     <li>
                         <form role="search" class="navbar-left app-search pull-left hidden-xs">
@@ -89,10 +85,20 @@
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle waves-effect waves-light profile" data-toggle="dropdown" aria-expanded="true"><img src="/assets/images/users/avatar-1.jpg" alt="user-img" class="img-circle"> </a>
                         <ul class="dropdown-menu">
-                            <li><a href="javascript:void(0)"><i class="ti-user m-r-5"></i> Profile</a></li>
-                            <li><a href="javascript:void(0)"><i class="ti-settings m-r-5"></i> Settings</a></li>
-                            <li><a href="javascript:void(0)"><i class="ti-lock m-r-5"></i> Lock screen</a></li>
-                            <li><a href="javascript:void(0)"><i class="ti-power-off m-r-5"></i> Logout</a></li>
+                            <!-- <li><a href="javascript:void(0)"><i class="ti-user m-r-5"></i> Profile</a></li> -->
+                            <!-- <li><a href="javascript:void(0)"><i class="ti-settings m-r-5"></i> Settings</a></li> -->
+                            <!-- <li><a href="javascript:void(0)"><i class="ti-lock m-r-5"></i> Lock screen</a></li> -->
+                            <!-- <li><a href="javascript:void(0)"><i class="ti-power-off m-r-5"></i> Logout</a></li> -->
+                            <li>
+                              <%= link_to admin_path do %>
+                                <i class="ti-user m-r-5"></i> Profile
+                              <% end %>
+                            </li>
+                            <li>
+                              <%= link_to destroy_user_session_path, method: :delete do %>
+                                <i class="ti-power-off m-r-5"></i> Logout
+                              <% end %>
+                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -115,29 +121,27 @@
     <!-- End topbar -->
 
 
-    <!-- Navbar Start -->
-    <div class="navbar-custom">
-        <div class="container">
-            <div id="navigation">
-                <!-- Navigation Menu-->
-                <ul class="navigation-menu">
-                    <li class="has-submenu">
-                      <%= link_to admin_path do %>
-                        <i class="md md-dashboard"></i>Dashboard
-                      <% end %>
-                    </li>
-                    <li class="has-submenu">
-                      <%= link_to admin_events_path do %>
-                        <i class="md md-event"></i>Event
-                      <% end %>
-                    </li>
-                    <li class="has-submenu">
-                      <%= link_to admin_users_path do %>
-                        <i class="md md-person"></i>User
-                      <% end %>
-                    </li>
-                </ul>
-            </div>
-        </div>
+  <div class="navbar-custom">
+    <div class="container">
+      <div id="navigation">
+        <ul class="navigation-menu">
+          <li class="has-submenu">
+            <%= link_to admin_path do %>
+              <i class="md md-dashboard"></i>Dashboard
+            <% end %>
+          </li>
+          <li class="has-submenu">
+            <%= link_to admin_events_path do %>
+              <i class="md md-event"></i>Event
+            <% end %>
+          </li>
+          <li class="has-submenu">
+            <%= link_to admin_users_path do %>
+              <i class="md md-person"></i>User
+            <% end %>
+          </li>
+        </ul>
+      </div>
     </div>
+  </div>
 </header>
