--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -9,7 +9,8 @@
 
     <link rel="shortcut icon" href="/assets/images/favicon_1.ico">
 
-    <title>Minton - Responsive Admin Dashboard Template</title>
+    <title>Daydash</title>
+    <%= csrf_meta_tags %>
 
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/assets/css/core.css" rel="stylesheet" type="text/css" />
@@ -26,6 +27,9 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
     <script src="/assets/js/modernizr.min.js"></script>
+
+    <%= stylesheet_link_tag    'management', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag "management", "data-turbolinks-track" => true %>
   </head>
   <body>
     <%= render partial: "admin/header" %>
