--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -37,7 +37,7 @@
               <label class="col-sm-3 control-label">From to</label>
               <div class="col-sm-6">
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="mm/dd/yyyy" id="datepicker-autoclose">
+                  <input type="text" class="form-control" placeholder="dd/mm/yyyy" id="datepicker-autoclose" required date-format="dd/mm/yyyy">
                   <span class="input-group-addon bg-primary b-0 text-white"><i class="ion-calendar"></i></span>
                 </div>
               </div>
@@ -71,7 +71,20 @@
             </div>
           </div>
           <div class="card-box">
-            <h4 class="m-t-0 m-b-20 header-title"><b>Overlays</b></h4>
+            <h4 class="m-t-0 m-b-20 header-title"><b>Location</b></h4>
+            <div class="form-group text-right">
+              <a class="btn btn-primary waves-effect waves-light" id="search-geolocation">Get location</a>
+            </div>
+
+            <div class="row form-group">
+              <div class="col-sm-6">
+                <input type="search" class="form-control" id="location-address">
+              </div>
+              <div class="col-sm-6">
+                <a class="btn btn-primary waves-effect waves-light" id="search-map">Search</a>
+              </div>
+            </div>
+
             <div id="gmaps-overlay" class="gmaps"></div>
           </div>
         </div>
@@ -96,224 +109,11 @@
 <script src="/assets/plugins/bootstrap-daterangepicker/daterangepicker.js"></script>
 
 <script>
-jQuery(document).ready(function() {
-
-  //advance multiselect start
-  $('#my_multi_select3').multiSelect({
-      selectableHeader: "<input type='text' class='form-control search-input' autocomplete='off' placeholder='search...'>",
-      selectionHeader: "<input type='text' class='form-control search-input' autocomplete='off' placeholder='search...'>",
-      afterInit: function(ms) {
-          var that = this,
-              $selectableSearch = that.$selectableUl.prev(),
-              $selectionSearch = that.$selectionUl.prev(),
-              selectableSearchString = '#' + that.$container.attr('id') + ' .ms-elem-selectable:not(.ms-selected)',
-              selectionSearchString = '#' + that.$container.attr('id') + ' .ms-elem-selection.ms-selected';
-
-          that.qs1 = $selectableSearch.quicksearch(selectableSearchString)
-              .on('keydown', function(e) {
-                  if (e.which === 40) {
-                      that.$selectableUl.focus();
-                      return false;
-                  }
-              });
-
-          that.qs2 = $selectionSearch.quicksearch(selectionSearchString)
-              .on('keydown', function(e) {
-                  if (e.which == 40) {
-                      that.$selectionUl.focus();
-                      return false;
-                  }
-              });
-      },
-      afterSelect: function() {
-          this.qs1.cache();
-          this.qs2.cache();
-      },
-      afterDeselect: function() {
-          this.qs1.cache();
-          this.qs2.cache();
-      }
+  jQuery('#datepicker-autoclose').datepicker({
+    autoclose: true,
+    format: "dd/mm/yyyy",
+    todayHighlight: true
   });
-
-  // Select2
-  $(".select2").select2();
-
-  $(".select2-limiting").select2({
-      maximumSelectionLength: 2
-  });
-
-});
-
-//Bootstrap-TouchSpin
-$(".vertical-spin").TouchSpin({
-  verticalbuttons: true,
-  buttondown_class: "btn btn-primary",
-  buttonup_class: "btn btn-primary",
-  verticalupclass: 'ion-plus-round',
-  verticaldownclass: 'ion-minus-round'
-});
-var vspinTrue = $(".vertical-spin").TouchSpin({
-  verticalbuttons: true
-});
-if (vspinTrue) {
-  $('.vertical-spin').prev('.bootstrap-touchspin-prefix').remove();
-}
-
-$("input[name='demo1']").TouchSpin({
-  min: 0,
-  max: 100,
-  step: 0.1,
-  decimals: 2,
-  boostat: 5,
-  maxboostedstep: 10,
-  buttondown_class: "btn btn-primary",
-  buttonup_class: "btn btn-primary",
-  postfix: '%'
-});
-$("input[name='demo2']").TouchSpin({
-  min: -1000000000,
-  max: 1000000000,
-  stepinterval: 50,
-  buttondown_class: "btn btn-primary",
-  buttonup_class: "btn btn-primary",
-  maxboostedstep: 10000000,
-  prefix: '$'
-});
-$("input[name='demo3']").TouchSpin({
-  buttondown_class: "btn btn-primary",
-  buttonup_class: "btn btn-primary"
-});
-$("input[name='demo3_21']").TouchSpin({
-  initval: 40,
-  buttondown_class: "btn btn-primary",
-  buttonup_class: "btn btn-primary"
-});
-$("input[name='demo3_22']").TouchSpin({
-  initval: 40,
-  buttondown_class: "btn btn-primary",
-  buttonup_class: "btn btn-primary"
-});
-
-$("input[name='demo5']").TouchSpin({
-  prefix: "pre",
-  postfix: "post",
-  buttondown_class: "btn btn-primary",
-  buttonup_class: "btn btn-primary"
-});
-$("input[name='demo0']").TouchSpin({
-  buttondown_class: "btn btn-primary",
-  buttonup_class: "btn btn-primary"
-});
-
-// Time Picker
-jQuery('#timepicker').timepicker({
-  defaultTIme: false
-});
-jQuery('#timepicker2').timepicker({
-  showMeridian: false
-});
-jQuery('#timepicker3').timepicker({
-  minuteStep: 15
-});
-
-//colorpicker start
-
-$('.colorpicker-default').colorpicker({
-  format: 'hex'
-});
-$('.colorpicker-rgba').colorpicker();
-
-// Date Picker
-jQuery('#datepicker').datepicker();
-jQuery('#datepicker-autoclose').datepicker({
-  autoclose: true,
-  todayHighlight: true
-});
-jQuery('#datepicker-inline').datepicker();
-jQuery('#datepicker-multiple-date').datepicker({
-  format: "mm/dd/yyyy",
-  clearBtn: true,
-  multidate: true,
-  multidateSeparator: ","
-});
-jQuery('#date-range').datepicker({
-  toggleActive: true
-});
-
-
-
-//Date range picker
-$('.input-daterange-datepicker').daterangepicker({
-  buttonClasses: ['btn', 'btn-sm'],
-  applyClass: 'btn-default',
-  cancelClass: 'btn-primary'
-});
-$('.input-daterange-timepicker').daterangepicker({
-  timePicker: true,
-  format: 'MM/DD/YYYY h:mm A',
-  timePickerIncrement: 30,
-  timePicker12Hour: true,
-  timePickerSeconds: false,
-  buttonClasses: ['btn', 'btn-sm'],
-  applyClass: 'btn-default',
-  cancelClass: 'btn-primary'
-});
-$('.input-limit-datepicker').daterangepicker({
-  format: 'MM/DD/YYYY',
-  minDate: '06/01/2016',
-  maxDate: '06/30/2016',
-  buttonClasses: ['btn', 'btn-sm'],
-  applyClass: 'btn-default',
-  cancelClass: 'btn-primary',
-  dateLimit: {
-      days: 6
-  }
-});
-
-$('#reportrange span').html(moment().subtract(29, 'days').format('MMMM D, YYYY') + ' - ' + moment().format('MMMM D, YYYY'));
-
-$('#reportrange').daterangepicker({
-  format: 'MM/DD/YYYY',
-  startDate: moment().subtract(29, 'days'),
-  endDate: moment(),
-  minDate: '01/01/2016',
-  maxDate: '12/31/2016',
-  dateLimit: {
-      days: 60
-  },
-  showDropdowns: true,
-  showWeekNumbers: true,
-  timePicker: false,
-  timePickerIncrement: 1,
-  timePicker12Hour: true,
-  ranges: {
-      'Today': [moment(), moment()],
-      'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
-      'Last 7 Days': [moment().subtract(6, 'days'), moment()],
-      'Last 30 Days': [moment().subtract(29, 'days'), moment()],
-      'This Month': [moment().startOf('month'), moment().endOf('month')],
-      'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
-  },
-  opens: 'left',
-  drops: 'down',
-  buttonClasses: ['btn', 'btn-sm'],
-  applyClass: 'btn-success',
-  cancelClass: 'btn-default',
-  separator: ' to ',
-  locale: {
-      applyLabel: 'Submit',
-      cancelLabel: 'Cancel',
-      fromLabel: 'From',
-      toLabel: 'To',
-      customRangeLabel: 'Custom',
-      daysOfWeek: ['Su', 'Mo', 'Tu', 'We', 'Th', 'Fr', 'Sa'],
-      monthNames: ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
-      firstDay: 1
-  }
-}, function(start, end, label) {
-  console.log(start.toISOString(), end.toISOString(), label);
-  $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
-});
 </script>
 
 <!-- Parsleyjs -->
@@ -327,7 +127,87 @@ $('#reportrange').daterangepicker({
 <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <!-- Gmaps file -->
 <script src="/assets/plugins/gmaps/gmaps.min.js"></script>
-<!-- demo codes -->
-<script src="/assets/pages/jquery.gmaps.js"></script>
+<script type="text/javascript">
+
+!function($) {
+  "use strict";
+
+  var GoogleMap = function() {};
+
+  //creates map with overlay
+  GoogleMap.prototype.createWithOverlay = function ($container) {
+    var map = new GMaps({
+      div: $container,
+      zoom: 16,
+      lat: 13.7563309,
+      lng: 100.50176510000006,
+      click: function(e) {
+        map.removeMarkers()
+        map.addMarker({
+          lat: map.getCenter().lat(),
+          lng: map.getCenter().lng(),
+          draggable: true
+        });
+      },
+    });
+
+    $('#search-geolocation').on('click', function(){
+      GMaps.geolocate({
+        success: function(position) {
+          map.setCenter(position.coords.latitude, position.coords.longitude);
+        },
+        error: function(error) {
+          alert('Geolocation failed: '+error.message);
+        },
+        not_supported: function() {
+          alert("Your browser does not support geolocation");
+        },
+        always: function() {
+          // alert("Done!");
+        }
+      });
+    });
+
+    $('#search-map').on('click', function(){
+      GMaps.geocode({
+        address: $('#location-address').val().trim(),
+        callback: function(results, status){
+          if(status=='OK'){
+            var latlng = results[0].geometry.location;
+            map.setCenter(latlng.lat(), latlng.lng());
+            map.removeMarkers()
+            map.addMarker({
+              lat: map.getCenter().lat(),
+              lng: map.getCenter().lng(),
+              draggable: true
+            });
+          }
+        }
+      });
+    });
+
+    return map;
+  },
+
+  //init
+  GoogleMap.prototype.init = function() {
+    var $this = this;
+    $(document).ready(function(){
+      //with sample markers
+      $this.createWithOverlay('#gmaps-overlay');
+    });
+  },
+
+  //init
+  $.GoogleMap = new GoogleMap, $.GoogleMap.Constructor = GoogleMap
+}(window.jQuery),
+
+//initializing
+function($) {
+  "use strict";
+  $.GoogleMap.init()
+}(window.jQuery);
+
+</script>
 <!-- Dropzone js -->
 <script src="/assets/plugins/dropzone/dist/dropzone.js"></script>
